feat(server): add _bbox field to citygml spatialid attribute API
